<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>vn.conyeu.commons</groupId>
    <artifactId>java-common</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <commons.io.version>2.15.1</commons.io.version>
        <commons.io.lang3>3.14.0</commons.io.lang3>
        <commons.io.validator>1.8.0</commons.io.validator>
        <jackson.core.version>2.17.0-rc1</jackson.core.version>
        <jackson.databind.version>2.17.0-rc1</jackson.databind.version>
        <jackson.jsr310.version>2.17.0-rc1</jackson.jsr310.version>

    </properties>

    <dependencies>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons.io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.io.lang3}</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>commons-validator</groupId>-->
<!--            <artifactId>commons-validator</artifactId>-->
<!--            <version>${commons.io.validator}</version>-->
<!--                  <exclusions>-->
<!--                    <exclusion>-->
<!--                      <groupId> commons-collections</groupId>-->
<!--                      <artifactId>commons-collections</artifactId>-->
<!--                    </exclusion>-->
<!--                  </exclusions>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.databind.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.jsr310.version}</version>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>maven2</id>
            <name>Maven Apache</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>